--- a/style.css
+++ b/style.css
@@ -64,20 +64,18 @@ h2, h3, h4{
  
 }
 .nav ul li a{
-    color:#0065FC;
+    color:black;
     text-decoration: none;
     margin: 30px;
-    padding: 20px;
-    padding-top: 35px;
+    padding: 38px;
     font-family: 'Raleway', sans-serif;
     
 }
 
 .nav ul li a:hover{
 
-    color:black;
+    color:#0065FC;
     border-top: 2px solid #0065FC;
-    color:black;
     font-weight: 100;
 }
 
@@ -427,10 +425,13 @@ a{
 #activite{
     display: flex;
     width: 100%;
-    justify-content: flex-start;
     position: relative;
     top: 100px;
-   
+}
+
+.activites{
+    width: 80%;
+    margin-right: 20px;
 }
 
 .image1{
@@ -447,21 +448,25 @@ a{
 
 }
 
-.img{
+#image3{
     height: 140px;
+}
+
+
+
+.picture{
+    height: 130px;
     border-radius: 10px;
     padding-bottom: 10px;
-    margin-bottom: 15px;
-    margin-right: 20px;
 }
 
 .img2{
     height: 330px;
-    margin-right: 20px;
     border-radius: 10px;
+ 
 }
 
-.img p{
+.picture p{
     margin-left: 5px;
     position: relative;
     top: -15px;
@@ -476,15 +481,20 @@ a{
 .imgdouble{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    
+    justify-content: space-between; 
 }
 
-#act h3{
-    position: absolute;
-    top: -30px;
-     
- 
+#double{
+    order: 0;
+    height: 170px;
+}
+
+#dubble{
+    height: 170px;
+}
+
+#image6{
+    height: 140px;
 }
 
 .arrondi{
@@ -492,13 +502,15 @@ border-top-right-radius: 10px;
 border-top-left-radius: 10px;
 }
 
-.act{
-padding: 30px;
-margin-left: 50px;
-position: absolute;
-left: 40px;
-top: 1300px;
+#act{
+    position: relative;
+    top: 90px;
+    font-size: 20px;
 }
+
+/* activities */
+
+
 
 
 /* footer */
@@ -955,7 +967,7 @@ h4, p{
     padding: 30px;
     justify-content: space-around;
     position: relative;
-    top: 1000px;
+    top: 900px;
     flex-direction: column;
    
 }
@@ -978,7 +990,7 @@ h4, p{
     height: 300px;
 }
 
-.img{
+.picture{
     height: 240px;
     border-radius: 20px;
     padding-bottom: 10px;
@@ -998,15 +1010,14 @@ h4, p{
 }
 
 
-
-.imgdouble{
-    display: flex;
-    flex-direction: column;
-    
+.activites{
+    width: 100%;
 }
 
 #act h3{
     position: relative;
+    top: 120px;
+    left: 30px;
     
 }
 
@@ -1030,7 +1041,7 @@ footer{
     background-color:#F2F2F2;
     width: 100%;
     height: max-content;
-    top: 1800px;
+    top: 1600px;
     padding: 20px;
 }
 
@@ -1056,7 +1067,7 @@ footer a{
 .footer-section {
     padding-top: 2em;
     padding-bottom: 2em;
-    width: 30%;
+    width: 100%;
 }
 
 
