ajout du zoom image

--- a/style.css
+++ b/style.css
@@ -559,6 +559,18 @@ footer a{
 }
 
 
+.zoom{
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.zoom:hover{
+	-webkit-transform: scale(1);
+	transform: scale(1.1);
+}
+
+
 @media screen  and (max-width:768px){
 
    .container{
