--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-   box-sizing:border-box ;
+    box-sizing:border-box ;
 }
 
 
@@ -27,12 +27,12 @@ em{
 
 
 Body{ 
-    font-family: ‘Raleway’; 
+    font-family: 'Raleway', sans-serif;
     font-weight:300; 
 }
 
 h2, h3, h4{
-    font-family:‘Raleway’ ;
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
 }
 
@@ -51,39 +51,29 @@ h2, h3, h4{
 
  
  header{
-
-     display: grid;
-     grid-template-columns: 1fr 3fr 1fr;
-     grid-template-rows: 1fr;
-     grid-template-areas: "logo menu bouton";
-     height: 100px;
+     display: flex;
+     align-items: center;
      position: relative;
-     top: 12px;
-     
-  
 }
 
-.nav ul li{
-
-  display: inline-block;
- 
+.nav ul {
+  display: flex;
 }
 .nav ul li a{
    
     color:black;
     text-decoration: none;
-    margin: 30px;
-    padding: 38px;
+    padding: 26px;
     font-family: 'Raleway', sans-serif;
    
     
 }
 
+.nav ul li a.active,
 .nav ul li a:hover{
 
     color:#0065FC;
     border-top: 2px solid #0065FC;
-    font-weight: 100;
 }
 
 .nav{
@@ -94,20 +84,19 @@ h2, h3, h4{
 
 
 .nav3{
-    grid-area: bouton;
+    padding: 30px;
     position: relative;
-    top: 30px;
     color: #0065FC;
   
 }
 
-.logo{
-    grid-area: logo;
+.logo {
+    flex:1;
+}
+
+.logo a img {
     width: 100px;
     position: relative;
-    top: 10px;
-
-  
 }
 
 
@@ -130,7 +119,7 @@ a{
 
 
 
-p{
+p {
     font-size: 12px;
 }
 
@@ -139,7 +128,6 @@ p{
 #recherche{
 
     width: 100%;
-    height: 300px;
 
     
 }
@@ -204,7 +192,7 @@ p{
     display: flex;
     align-items: center;
     padding: 10px;
-    position: absolute;
+    position: relative;
     top: 250px;
    margin-right: 20px;
 }
@@ -285,14 +273,14 @@ p{
 
 .lodging-list {
     background-color: #eee;
-    padding: 2em;
+    padding: 1.8em;
     border-radius: 1em;
-    width: 64%;
+    width: 65%;
 }
 
 .lodging-popular{
     background-color: #eee;
-    padding: 2em;
+    padding: 1.8em;
     border-radius: 1em;
     width: 32%;
 }
@@ -341,6 +329,10 @@ a{
     text-decoration: none;
 }
 
+.showmore {
+    color: #000;
+    font-weight: bold;
+}
 
 
 .hotel1{
@@ -388,6 +380,12 @@ a{
 .fa-star.blue{
 
     color: #0065FC;
+  
+}
+
+.fa-star.grey{
+
+    color: #d4dae4;
   
 }
 
@@ -463,7 +461,7 @@ a{
 
 .image2{
     width: 100%;
-    height: 110px;
+    height: 100px;
     margin-bottom: 20px;
     object-fit: cover;
 
@@ -488,9 +486,10 @@ a{
 }
 
 .picture p{
-    margin-left: 5px;
+    margin-left: 10px;
     position: relative;
     top: -15px;
+    font-weight: bold;
 }
 
 .img2 p{
@@ -573,7 +572,7 @@ footer a{
 }
 .zoom:hover{
 	-webkit-transform: scale(1);
-	transform: scale(1.1);
+	transform: scale(1.02);
 }
 
 
@@ -586,76 +585,43 @@ footer a{
         padding: 0;
    }
 
-
     header{
+        flex-wrap: wrap;   
+    }
+  
+    .nav3{
+        order: 1;
+    }
+  
+    .nav{
+        order: 2;
+        width: 100%;
+        padding: 0;
+    }
 
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas: "logo empty bouton" 
-    "menu menu menu";
-       
-}
+    .nav ul li {
+        flex-grow: 1;
+        text-align: center;
+    }
 
+    .nav ul li a {
+        display: block;
+        width: 100%;
+        border-bottom: 2px solid gainsboro;
+    }
 
-
-   .nav3{
-
-    
-    grid-area: bouton;
-    position: relative;
-    color: #0065FC;
-    top: 20px;
-    right: 0px;
-      
-      
-   }
-
-.nav{
-
-    grid-area: menu;
-    position: relative;
-    width: 100%;
-    border-bottom: 2px solid gainsboro;
-    padding: 18px;
-    margin-top: 10px;
-}
-
-
-
-.nav ul li{
-    display: inline-block;
- 
-}
-.nav ul li a{
-    color:black;
-    text-decoration: none;
-    margin: 30px;
-    font-family: 'Raleway', sans-serif;
-    padding: 0;
-    
-
-}
-
-.nav ul li a:hover{
-      
-    color:black;
-    border-bottom: 2px solid #0065FC;
-    color:#0065FC;
-    font-weight: 100;
-    border-top: none;
-    padding-bottom: 30px;
-   
-}
-
-.logo{
-
-   
-    grid-area: logo;
-    width: 100px;
-    position: relative;
-    margin-left: 10px;
-}
+    .nav ul li a.active,
+    .nav ul li a:hover{
+        color:black;
+        border-bottom: 2px solid #0065FC;
+        color:#0065FC;
+        border-top: none;
+    }
+  
+    .logo{
+        order: 0;
+        margin-left: 30px;
+    }
 
  
 /* general  */
@@ -673,7 +639,7 @@ h3{
    
 }
 
-h4, p{
+p{
     font-size: 12px;
 }
 
@@ -682,7 +648,6 @@ h4, p{
 #recherche{
 
     width: 100%;
-    height: 300px;
     padding: 30px;
     position: relative;
     margin-top: 10px;
@@ -998,6 +963,10 @@ h4, p{
 
 
 /* section des activités */
+#titleactivite {
+    padding-left: 30px;
+    margin-top: 120px;
+}
 
 #activite{
     display: flex;
@@ -1007,7 +976,7 @@ h4, p{
     justify-content: space-around;
     position: relative;
     flex-direction: column;
-    margin-top: 750px;
+    margin-top: 660px;
    
 }
 
@@ -1051,12 +1020,6 @@ h4, p{
 
 .activites{
     width: 100%;
-}
-
-#act h3{
-    position: relative;
-    margin-left: 30px;
-    
 }
 
 #activite h2{
@@ -1124,67 +1087,44 @@ footer a{
      }
   
   
-     header{
+    header{
+        flex-wrap: wrap;   
+    }
   
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      grid-template-areas: "logo empty bouton" 
-      "menu menu menu";
-         
-  }
+    .nav3{
+        order: 1;
+    }
+  
+    .nav{
+        order: 2;
+        width: 100%;
+        padding: 0;
+    }
 
- 
-  
-  
-     .nav3{
-  
-      
-      grid-area: bouton;
-      position: relative;
-      color: #0065FC;
-      top: 20px;
-      margin-left: 100px;
-        
-     }
-  
-  .nav{
-  
-      grid-area: menu;
-      position: relative;
-      width: 100%;
-      border-bottom: 2px solid gainsboro;
-      padding: 18px;
-      
-  }
+    .nav ul li {
+        flex-grow: 1;
+        text-align: center;
+    }
 
-  .nav ul li{
-      margin-left: 100px;
-  }
-  
-  
-  
+    .nav ul li a {
+        display: block;
+        width: 100%;
+        border-bottom: 2px solid gainsboro;
+    }
 
+    .nav ul li a.active,
+    .nav ul li a:hover{
+        color:black;
+        border-bottom: 2px solid #0065FC;
+        color:#0065FC;
+        border-top: none;
+    }
   
-  .nav ul li a:hover{
-        
-      color:black;
-      border-bottom: 2px solid #0065FC;
-      color:#0065FC;
-      font-weight: 100;
-      border-top: none;
-      padding-bottom: 30px;
-     
-  }
-  
-  .logo{
-  
-     
-      grid-area: logo;
-      width: 100px;
-      position: relative;
-      margin-left: 10px;
-  }
+    .logo{
+        order: 0;
+        margin-left: 30px;
+    }
+
   /* general  */
   h2,h3,h4,h5,p, a{
      
@@ -1200,7 +1140,7 @@ footer a{
      
   }
   
-  h4, p{
+  p{
       font-size: 12px;
   }
   
@@ -1209,7 +1149,6 @@ footer a{
   #recherche{
   
       width: 100%;
-      height: 300px;
       padding: 30px;
       position: relative;
   
@@ -1285,7 +1224,7 @@ footer a{
   .filtre{
       display: flex;
       padding: 30px;
-      position: absolute;
+      position: relative;
       width: 100%;
      margin-right: 20px;
      align-items: flex-start;
@@ -1512,6 +1451,11 @@ footer a{
   
   
   /* section des activités */
+
+  #titleactivite {
+      padding-left: 30px;
+      margin-top: 120px;
+  }
   
   #activite{
       display: flex;
@@ -1521,7 +1465,7 @@ footer a{
       justify-content: space-around;
       position: relative;
       flex-direction: column;
-      margin-top: 800px;
+      margin-top: 660px;
      
   }
   
@@ -1565,13 +1509,6 @@ footer a{
   
   .activites{
       width: 100%;
-  }
-  
-  #act h3{
-      position: relative;
-      top: 120px;
-      left: 30px;
-      
   }
   
   #activite h2{
