--- a/style.css
+++ b/style.css
@@ -437,11 +437,16 @@ a{
 
 /* section des activités */
 
+#titleactivite {
+    margin-top: 30px;
+    font-size: 20px;
+}
+
 #activite{
     display: flex;
     width: 100%;
     position: relative;
-    top: 50px;
+    top: 40px;
 }
 
 .activites{
@@ -820,6 +825,12 @@ p{
 .lodging-popular h3 {
     display: flex;
     justify-content: space-between;
+    font-size: 20px;
+
+}
+
+.lodging-list h3{
+    font-size:20px;
 }
 
 .lodging-list-articles {
@@ -954,6 +965,7 @@ p{
 #titleactivite {
     padding-left: 30px;
     margin-top: 10px;
+    font-size: 20px;
 }
 
 #activite{
@@ -964,30 +976,31 @@ p{
     justify-content: space-around;
     position: relative;
     flex-direction: column;
-    margin-top: 600px;
+    margin-top: 500px;
    
 }
 
 .image1{
     width: 100%;
-    height: 200px;
+    height: 140px;
     object-fit: cover;
 }
 
 .image2{
     width: 100%;
-    height: 200px;
+    height: 140px;
     margin-bottom: 20px;
     object-fit: cover;
 }
 
 .image3{
     width: 100%;
-    height: 300px;
+    height: 200px;
 }
 
+
 .picture{
-    height: 240px;
+    height: 170px;
     border-radius: 20px;
     padding-bottom: 10px;
     margin-bottom: 15px;
@@ -1035,7 +1048,7 @@ footer{
     width: 100%;
     height: max-content;
     padding: 20px;
-    margin-top: 600px;
+    margin-top: 450px;
 }
 
 footer a{
